--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <h1>test</h1>
+    <form id="userForm">
+      <input type="text" id="userEntry">
+      <button type="submit" name="button">Submit</button>
+    </form>
   </body>
 </html>
