--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,15 @@
       <input type="text" id="userEntry">
       <button type="submit" name="button">Submit</button>
     </form>
+    <div class="results">
+      <div class="main-entry">
+        <h4 id="teaser"></h4>
+        <h2>Journal Entry:</h2>
+        <p id="entry"></p>
+      </div>
+      <div class="numbers">
+        <p>The Entry has <span id="words"> </span> words, <span id="vowels"> </span> vowels, and <span id="consonants"> </span> consonants.</p>
+      </div>
+    </div>
   </body>
 </html>
